# sqlite_func

./: .gitignore  LICENSE  README.md  gen_all.bat  gen_lib.bat
baselib/: CMakeLists.txt  gen_lib.bat
sqlite_func/: CMakeLists.txt  gen_main.bat  sqlite_func.sln
sqlite_func/include/: sqlite_func.h  sqlite_func_pack.h  sqlite_func_pack2.h
sqlite_func/sqlite_func/: sqlite_func.cpp  sqlite_func.h  sqlite_func.vcxproj  sqlite_func.vcxproj.filters
sqlite_func/sqlite_func/x64/Debug/: sqlite_func.exe.recipe  sqlite_func.ilk  vc142.idb  vc143.idb
sqlite_func/sqlite_func/x64/Debug/sqlite_func.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sqlite_func.lastbuildstate
sqlite_func/src/: sqlite_func.cpp  test.db
